# master-python

./: I-Can-Do-All-Things.md  README.md  learn_python.ipynb
.github/prompts/: WhatNowAgent.prompt.md
llm-engineering/go-based-llm-test-analysis/: parser.ipynb
llm-engineering/langgraph-learning/: README.md  conversation_history.txt  drafter.ipynb  langgraph_test.ipynb  main.py  pyproject.toml
programing_interview/: 30_day_interview.ipynb  data_structure.ipynb  practice_python.ipynb  sorting.ipynb
programing_interview/2025/: README.md
programing_interview/go/: advance.go  basics.go  pratice-leetcode.go  test.go
programing_interview/javascript/: alert.js
programing_interview/json_parsing/: test.ipynb
programing_interview/oops/: abstract_class.py  inheritance.py  polymorphism-practice.py  polymorphism.py
programing_interview/python/: generator_decorator.py  interview.py  mirror_matrix.ipynb  practice_python.ipynb  recursion.ipynb  run_time_complexity.ipynb  sorting.ipynb  substring_algorithms.ipynb  test.py
programing_interview/react/: deploy.md
programing_interview/sql/: practice_queries.sql
pytest/: README.md  report.html
pytest/source/: myfunctions.py  shapes.py
pytest/tests/: conftest.py  test_myfunctions.py  test_pytest_logging.py  test_shapes.py
pytest/utility/: baselogger.py
robo-test/: first-test.robot  log.html  output.xml  report.html
robo-test/libraries/: calculator.py
robo-test/resources/: calculator_keyword.resource
robo-test/results/: log.html  output.xml  (+1 more)
selenium/: login-tca.py
selenium-pytest/: open-ai-test-cases.py
(+140 files in other folders)
