[project]
name = "langgraph-learning"
version = "0.1.0"
description = "LangGraph learning and experimentation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
]
